<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <Preference
        android:key="network_traffic_state"
        android:icon="@drawable/ic_settings_network_traffic"
        android:title="@string/network_traffic_state_title"
        android:summary="@string/network_traffic_state_summary"
        android:fragment="com.geometrics.fragments.NetworkTrafficSettings"
        android:defaultValue="false" />    

    <Preference
        android:key="status_bar_icon_manager"
        android:title="@string/status_bar_title"
        android:summary="@string/status_bar_system_icons_summary">
        <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" /> 
    </Preference>

    <PreferenceCategory
        android:title="@string/icons_category">

	<com.geometrics.support.preferences.SystemSettingSwitchPreference
            android:key="data_disabled_icon"
            android:title="@string/data_disabled_icon_title"
            android:summary="@string/data_disabled_icon_summary"
            android:defaultValue="true"/>

	<com.geometrics.support.preferences.SystemSettingSwitchPreference
            android:key="roaming_indicator_icon"
            android:title="@string/roaming_indicator_icon_title"
            android:summary="@string/roaming_indicator_icon_summary"
            android:defaultValue="true"/>

	<com.geometrics.support.preferences.SystemSettingSwitchPreference
            android:key="show_fourg_icon"
            android:title="@string/show_fourg_icon_title"
            android:summary="@string/show_fourg_icon_summary"
            android:defaultValue="false"/>
    </PreferenceCategory>

</PreferenceScreen>
